# AdjointNonlinearRayTracing

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  generate_cmake.sh  setpath.sh
core/: cable.py  fiber_opt.py  focalstack_opt.py  fuel_injection_opt.py  grid.py  image_opt.py  luneburg_opt.py  optimizer.py  sensor.py  source.py  tracer.py
data/: fuel_injection_64.npy  params-fiber.yaml  params-legoknight-fs.yaml  params-luneburg.yaml  params-sdf.yaml
ext/: CMakeLists.txt
include/: integrator.h  tracer.h  types.h  volume.h
path_matrix/: path_matrix.py  run_fuel_injection_2008.py
src/: __init__.py  cylinder_volume.cpp  drrt.cpp  test.cpp  tracer.cpp  volume.cpp
utils/: plot_utils.py
